Prevent jumping when image loads.

--- a/web/static/css/magic8ball.scss
+++ b/web/static/css/magic8ball.scss
@@ -3,6 +3,7 @@
 }
 .magic8ball-wrapper {
   width: 750px;
+  min-height: 700px;
   margin: 0 auto;
   position: relative;
   img {
